# oreilly-open-source-reasoning

./: 11-deepseek-distill-qwen3-8.ipynb  12-qwen3-8.ipynb  13-nanbeige-3.ipynb  14-glm-z1-9.ipynb  14-nanbeige-3-tool.ipynb  15-mimo-7.ipynb  16-gpt-oss-20.ipynb  16-qwen3-0.6.ipynb  17-qwen3-0.6.ipynb  17-qwen3-8-awq.ipynb  21-deepseek-distill-qwen3-8-streaming-exl2.ipynb  21-qwen3-8-awq-vllm.ipynb  22-deepseek-distill-qwen3-8-nostop-exl2.ipynb  31-mlx-deepseek-qwen3-8b.ipynb  32-mlx-qwen-30-3.ipynb  33-openrouter.ipynb  41-finetune-huggingface-grpo-trl.ipynb  41-finetune-numinamath-grpo-trl-qwen-complete.ipynb  41-finetune-numinamath-grpo-trl-qwen.ipynb  41-finetune-numinamath-grpo-trl.ipynb  42-finetune-gsm8k-grpo-trl-gemma-complete.ipynb  42-finetune-gsm8k-grpo-trl.ipynb  42-finetune-huggingface-grpo-trl-gemma-complete.ipynb  42-finetune-huggingface-grpo-trl.ipynb  42-unsloth-qwen3-4-base-complete.ipynb  42-unsloth-qwen3-4-base.ipynb  README.md  macos.toml  pyproject.toml  requirements.txt  unsloth.toml
