[project]
name = "oreilly-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "exllamav2>=0.3.1",
    "jupyter>=1.1.1",
    "liger-kernel>=0.5.10",
    "math-verify>=0.7.0",
    "mlx>=0.26.1",
    "mlx-lm>=0.25.2",
    "pef>=1.1.0",
    "peft>=0.15.2",
    "transformers>=4.52.4",
    "trl>=0.18.1",
]
