[project]
name = "reasoning-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "flash-attn>=2.8.3",
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
    "kernels>=0.12.1",
    "liger-kernel>=0.7.0",
    "openrouter>=0.6.0",
    "peft>=0.18.1",
    "transformers>=5.2.0",
    "triton>=3.4.0",
    "trl>=0.28.0",
    "unsloth>=2025.7.2",
    "vllm>=0.11.0",
]
